--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -1,22 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Lab1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## ej 1.\n",
-    "\n",
-    "Dadas 3 variables numéricas x, y, z, notar las diferencias entre x/y + z y x/(y + z), y entre x/y*z y x/(y*z)."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -463,22 +447,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 141,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "No real solution available\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "((1.0, 0.0), (-2.0, 2.0))"
+       "((1.0, 0.0), (-2.0, 2.0), None)"
       ]
      },
-     "execution_count": 131,
+     "execution_count": 141,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def buena(a, b, c):\n",
+    "    # avoid math errors\n",
+    "    if (b ** 2 - 4 * a * c) < 0:\n",
+    "        print('No real solution available')\n",
+    "        return None\n",
+    "    \n",
+    "    # get the farest root from zero\n",
     "    if b >= 0:\n",
     "        x_1 = (-b - math.sqrt(b ** 2 - 4 * a * c)) / (2 * a)\n",
     "    else:\n",
@@ -490,7 +487,7 @@
     "    x_2 = c / (a * x_1)\n",
     "    return x_1, x_2\n",
     "\n",
-    "buena(1, -1, 0), buena(1, 0, -4)"
+    "buena(1, -1, 0), buena(1, 0, -4), buena(1, 1, 1)"
    ]
   },
   {
