- update README - start lab2 -

--- a/lab1.ipynb
+++ b/lab1.ipynb
@@ -1,8 +1,22 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Lab 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1: Precedencia"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -40,14 +54,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej2.\n",
-    "\n",
-    "Comprobar el épsilon de la máquina."
+    "## 2: Épsilon"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -56,7 +68,7 @@
        "(-57, -50)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -79,14 +91,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej3.\n",
+    "## 3: Overflow y Underflow\n",
     "\n",
     "Obtener el mayor y menor número positivo en punto flotante (overflow y underflow). Para obtener el mayor número de overflow escribir un ciclo que vaya calculando las sucesivas potencias de 2 y que finalice cuando se produce overflow. Se recomienda utilizar el comando isinf (importar la librería numpy) para detectar cuando se produce el overflow (escribir help(np.isinf) para obtener información sobre este comando). Otra instrucción que puede resultar útil es break para interrumpir el ciclo cuando se produce el overflow. El número de underflow se puede obtener dividiendo por 2 repetidamente hasta obtener un número indistinguible del cero en punto flotante."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -129,7 +141,7 @@
        "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -152,7 +164,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej4\n",
+    "## 4: Aproximaciones\n",
     "\n",
     "Escribir la siguiente secuencia de comandos en un archivo con extensión .py y ejecutarlo.\n",
     "```python\n",
@@ -165,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +186,7 @@
        "(10.09999999999998, 10.0)"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -210,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -219,7 +231,7 @@
        "9.99999999999998"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -236,7 +248,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej4\n",
+    "## 5: Factorial\n",
     "\n",
     "- Escriba un programa que calcule el factorial de 6.\n",
     "- Importe la librería math, ¿qué función puede utilizar para calcular el punto anterior? \n",
@@ -245,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +266,7 @@
        "720"
       ]
      },
-     "execution_count": 62,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -268,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +289,7 @@
        "720"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -301,7 +313,7 @@
        "(720, 120, 2)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -319,29 +331,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej6\n",
+    "## 6: Input\n",
     "\n",
     "Escribir un programa que pida dos números reales e imprima en la pantalla el mayor de ellos. El programa debe indicar si los números son iguales."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdin",
      "output_type": "stream",
      "text": [
-      "Escriba el primer número: 0.6\n",
-      "Escriba el segundo número: 0.23\n"
+      "Escriba el primer número: 23\n",
+      "Escriba el segundo número: 45\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.6 > 0.23\n"
+      "45.0 > 23.0\n"
      ]
     }
    ],
@@ -361,14 +373,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej7\n",
+    "## 7: Potencias\n",
     "\n",
     "Escribir una función que calcule la potencia enésima de un número, es decir que devuelva $x^n$ para x real y n entero. Realice un programa que utilice la función e imprima en pantalla las primeras 5 potencias naturales de un número ingresado."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -378,7 +390,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -411,7 +423,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej8\n",
+    "## 8: Resolución de ecuaciones con Baskhara\n",
     "\n",
     "Escribir dos funciones en Python para la resoluci ́on de ecuaciones de segundo grado $a^2 + bx + c = 0$.\n",
     "\n",
@@ -420,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -429,7 +441,7 @@
        "((1.0, 0.0), (2.0, -2.0))"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -447,7 +459,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -463,7 +475,7 @@
        "((1.0, 0.0), (-2.0, 2.0), None)"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -482,6 +494,8 @@
     "        x_1 = (-b + math.sqrt(b ** 2 - 4 * a * c)) / (2 * a)\n",
     "\n",
     "    # avoid division by zero\n",
+    "    # if one of the roots is zero,\n",
+    "    # let's assume they both are\n",
     "    if x_1 == 0: return 0, 0\n",
     "\n",
     "    x_2 = c / (a * x_1)\n",
@@ -494,7 +508,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## ej 9\n",
+    "## 9: Algoritmo de Horner\n",
     "\n",
     "Escribir una funci ́on que implemente el algoritmo de Horner (horn) para la evaluaci ́on de\n",
     "polinomios. La sintaxis de llamada a la rutina deber ́ıa ser:\n",
@@ -510,28 +524,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(8, 9)"
+       "9"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def horn(coefs, x):\n",
-    "    res = coefs[0]\n",
+    "    p = coefs[0]\n",
     "    for c in coefs[1:]:\n",
-    "        res = res * x + c\n",
-    "    return res\n",
+    "        p = (p * x) + c\n",
+    "    return p\n",
     "\n",
-    "horn([2, 0, 0], 2), horn([2, 0, 1], 2)"
+    "horn([2, 0, 1], 2)"
    ]
   }
  ],
