- reorganizando y agregando archivos python -

--- a/Labs/Lab 1/Lab 1.ipynb
+++ b/Labs/Lab 1/Lab 1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lab 1"
+    "# Lab 1: Intro"
    ]
   },
   {
@@ -132,16 +132,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "sys.float_info(max=1.7976931348623157e+308, max_exp=1024, max_10_exp=308, min=2.2250738585072014e-308, min_exp=-1021, min_10_exp=-307, dig=15, mant_dig=53, epsilon=2.220446049250313e-16, radix=2, rounds=1)"
+       "(1.7976931348623157e+308, 2.2250738585072014e-308)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +150,7 @@
     "# check\n",
     "\n",
     "import sys\n",
-    "sys.float_info"
+    "sys.float_info.max, sys.float_info.min"
    ]
   },
   {
