- arreglando latex - readme -

--- a/Labs/Lab 1/Lab 1.ipynb
+++ b/Labs/Lab 1/Lab 1.ipynb
@@ -84,16 +84,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "No es el resultado esperado, espero que **b** sea un número que supere el épsilon y por lo tanto pase a ser positivo (supongo), puede ser que la máquina tenga un épsilon más alto?"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 3: Overflow y Underflow\n",
     "\n",
-    "Obtener el mayor y menor número positivo en punto flotante (overflow y underflow). Para obtener el mayor número de overflow escribir un ciclo que vaya calculando las sucesivas potencias de 2 y que finalice cuando se produce overflow. Se recomienda utilizar el comando isinf (importar la librería numpy) para detectar cuando se produce el overflow (escribir help(np.isinf) para obtener información sobre este comando). Otra instrucción que puede resultar útil es break para interrumpir el ciclo cuando se produce el overflow. El número de underflow se puede obtener dividiendo por 2 repetidamente hasta obtener un número indistinguible del cero en punto flotante."
+    "Obtener el mayor y menor número positivo en punto flotante (overflow y underflow). Para obtener el mayor número de overflow escribir un ciclo que vaya calculando las sucesivas potencias de 2 y que finalice cuando se produce overflow. Se recomienda utilizar el comando `isinf` (importar la librería numpy) para detectar cuando se produce el overflow (escribir `help(np.isinf)` para obtener información sobre este comando). Otra instrucción que puede resultar útil es break para interrumpir el ciclo cuando se produce el overflow. El número de underflow se puede obtener dividiendo por 2 repetidamente hasta obtener un número indistinguible del cero en punto flotante."
    ]
   },
   {
@@ -166,7 +159,8 @@
    "source": [
     "## 4: Aproximaciones\n",
     "\n",
-    "Escribir la siguiente secuencia de comandos en un archivo con extensión .py y ejecutarlo.\n",
+    "Correr:\n",
+    "\n",
     "```python\n",
     "x=0\n",
     "while x != 10:\n",
@@ -427,7 +421,7 @@
     "\n",
     "Escribir dos funciones en Python para la resoluci ́on de ecuaciones de segundo grado $a^2 + bx + c = 0$.\n",
     "\n",
-    "Una de ellas, que llamaremos de mala, implementando la tradicional f ́ormula de Baskhara y la otra, que llamaremos de buena, usando una manera eficiente para evitar cancelaci ́on de d ́ıgitos significativos."
+    "Una de ellas, que llamaremos de mala, implementando la tradicional fórmula de Baskhara y la otra, que llamaremos de buena, usando una manera eficiente para evitar cancelación de dígitos significativos."
    ]
   },
   {
@@ -510,8 +504,8 @@
    "source": [
     "## 9: Algoritmo de Horner\n",
     "\n",
-    "Escribir una funci ́on que implemente el algoritmo de Horner (horn) para la evaluaci ́on de\n",
-    "polinomios. La sintaxis de llamada a la rutina deber ́ıa ser:\n",
+    "Escribir una función que implemente el algoritmo de Horner (horn) para la evaluación de\n",
+    "polinomios. La sintaxis de llamada a la rutina debería ser:\n",
     "```\n",
     "p = horn(coefs,x)\n",
     "```\n",
@@ -519,7 +513,7 @@
     "```\n",
     "p = horn([1 -5 6 2], 2)\n",
     "```\n",
-    "entonces la variable p almacenara ́ el valor p(2) donde p(x) = x3 − 5x2 + 6x + 2."
+    "entonces la variable `p` almacenará el valor $ p(2) $ donde $ p(x) = x3 − 5x2 + 6x + 2 $."
    ]
   },
   {
