--- a/Labs/Lab 2/Lab 02.ipynb
+++ b/Labs/Lab 2/Lab 02.ipynb
@@ -37,19 +37,15 @@
    "source": [
     "## 1: Método de bisección\n",
     "\n",
-    "Escribir una función que implemente el método de bisección para hallar una raíz de\n",
-    "\n",
-    "$$ f : R 􏰀→ R $$\n",
-    "\n",
-    "en el intervalo [a,b]. La función debe llamarse “rbisec”, y tener como entrada los argumentos `(fun,I,err,mit)`, donde fun es una función que dado x retorna f(x), I= [a,b] es un intervalo en R, err es la tolerancia deseada del error y mit es el número máximo de iteraciones permitidas.\n",
+    "Escribir una función que implemente el método de bisección para hallar una raíz de $ f : \\mathbb R 􏰀\\to \\mathbb R $ en el intervalo `[a,b]`. La función debe llamarse `rbisec`, y tener como entrada los argumentos `(fun,I,err,mit)`, donde fun es una función que dado $ x $ retorna $ f(x)$, $ I=[a,b] $ es un intervalo en $ \\mathbb R $, `err` es la tolerancia deseada del error y `mit` es el número máximo de iteraciones permitidas.\n",
     "\n",
     "El algoritmo debe finalizar en la k-esima iteración si \n",
     "\n",
     "$$ |f(xk)| < err $$\n",
     "<center>o si</center>\n",
-    "$$ k ≥ mit $$\n",
+    "$$ k \\geq mit $$\n",
     "\n",
-    "Los argumentos de salida deben ser (hx,hf) donde hx= [x1, . . . , xN ] es una lista que representa el historial de puntos medios y hf= [f(x1),...,f(xN)] el historial de los respectivos valores funcionales."
+    "Los argumentos de salida deben ser `(hx,hf)` donde $ hx=[x1, \\ldots ,xN] $ es una lista que representa el historial de puntos medios y $ hf= [f(x1), \\ldots ,f(xN)] $ el historial de los respectivos valores funcionales."
    ]
   },
   {
@@ -398,15 +394,15 @@
    "source": [
     "## 3: Método de Newton\n",
     "\n",
-    "Escribir una función que implemente el método de Newton para hallar una raíz de $ f : R 􏰀→ R $ partiendo de un punto inicial x0. La función debe llamarse “rnewton”, y tener como entrada `(fun,x0,err,mit)` donde fun es una función que dado x retorna f(x) y f′(x), x0 es un punto inicial en R, err es la tolerancia deseada del error y mit es el núme- ro máximo de iteraciones permitidas. El algoritmo debe finalizar en la k-esima iteración si se cumple alguna de las siguientes condiciones:\n",
+    "Escribir una función que implemente el método de Newton para hallar una raíz de $ f : \\mathbb R \\to \\mathbb R $ partiendo de un punto inicial x0. La función debe llamarse “rnewton”, y tener como entrada `(fun,x0,err,mit)` donde fun es una función que dado x retorna $ f(x) $ y $ f′(x) $, x0 es un punto inicial en $ \\mathbb R $, err es la tolerancia deseada del error y mit es el número máximo de iteraciones permitidas. El algoritmo debe finalizar en la k-esima iteración si se cumple alguna de las siguientes condiciones:\n",
     "\n",
-    "$$ {|x_k − x_{k-1}| \\over |x_k|} < err $$\n",
+    "$$ {|x_k - x_{k-1}| \\over |x_k|} < err $$\n",
     "<center>ò</center>\n",
     "$$ |f(xk)| < err $$\n",
     "<center>ò</center>\n",
-    "$$ k ≥ mit. $$\n",
+    "$$ k \\geq mit $$\n",
     "\n",
-    "La salida debe ser (hx,hf) donde hx= [x1, . . . , xN ] es una lista que representa el histórico de puntos generados y hf= [f(x1),...,f(xN)] el histórico de los respectivos valores funcionales."
+    "La salida debe ser (hx,hf) donde $ hx=[x1, \\ldots , xN ] $ es una lista que representa el histórico de puntos generados y $ hf= [f(x1), \\ldots, f(xN)] $ el histórico de los respectivos valores funcionales."
    ]
   },
   {
@@ -586,21 +582,9 @@
    "source": [
     "## 4: Encontrar $ \\sqrt[3]{a} $ por método de Newton\n",
     "\n",
-    "Escribir una función que, ingresando a > 0, retorne una aproximación de \n",
+    "Escribir una función que, ingresando $ a > 0 $, retorne una aproximación de $ \\sqrt[3]{a} $.\n",
     "\n",
-    "$$ \\sqrt[3]{a} $$\n",
-    "\n",
-    "La aproximación debe realizarse usando el método de Newton del ejercicio anterior para resolver \n",
-    "\n",
-    "$$ x^3 − a = 0$$\n",
-    "\n",
-    "con un error menor a\n",
-    "\n",
-    "$$ 10^{-6} $$\n",
-    "\n",
-    "mediante el uso de la función\n",
-    "\n",
-    "$$ f(x)􏰀 = x^3 − a$$"
+    "La aproximación debe realizarse usando el método de Newton del ejercicio anterior para resolver $ x^3 - a = 0$ con un error menor a $ 10^{-6} $ mediante el uso de la función $ f(x)􏰀 = x^3 - a$."
    ]
   },
   {
@@ -659,16 +643,11 @@
    "source": [
     "## 5: Método de iteración de punto fijo\n",
     "\n",
-    "Escribir una función que implemente el método de punto fijo para hallar un punto fijo de\n",
+    "Escribir una función que implemente el método de punto fijo para hallar un punto fijo de $ \\Phi : \\mathbb R \\to \\mathbb R $ partiendo de un punto inicial x_0.\n",
     "\n",
-    "$$ φ : R 􏰀→ R $$\n",
-    "\n",
-    "partiendo de un punto inicial x_0.\n",
-    "\n",
-    "La función debe llamarse `ripf`, y tener como entrada `(fun, x0, err, mit)` donde `fun` es una función que dado x retorna φ(x), `x0` es un punto en R, `err` es la tolerancia deseada del error y `mit` es el número máximo de iteraciones permitidas.\n",
+    "La función debe llamarse `ripf`, y tener como entrada `(fun, x0, err, mit)` donde `fun` es una función que dado x retorna $ \\Phi(x) $, `x0` es un punto en R, `err` es la tolerancia deseada del error y `mit` es el número máximo de iteraciones permitidas.\n",
     "\n",
     "El algoritmo debe finalizar en la k-ésima iteración si:\n",
-    "\n",
     "$$ |x_k - x_{k-1}| < err $$\n",
     "<center>ó</center>\n",
     "$$ k \\geq mit $$"
@@ -702,13 +681,7 @@
    "source": [
     "## 6: Ecuación usando iteración de punto fijo\n",
     "\n",
-    "Se quiere usar la fórmula de iteración:\n",
-    "\n",
-    "$$x_{n+1} = 2^{x_n + 1}$$\n",
-    "\n",
-    "para resolver la ecuación \n",
-    "\n",
-    "$$ 2x = 2^x $$\n",
+    "Se quiere usar la fórmula de iteración: $ x_{n+1} = 2^{x_n + 1}$ para resolver la ecuación $ 2x = 2^x $.\n",
     "\n",
     "Utilizar la función del ejercicio anterior para investigar si converge; y en caso afirmativo,\n",
     "estudiar hacia qué valores lo hace para distintas elecciones de x0.\n",
@@ -799,13 +772,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7: $u(x) = y$\n",
+    "## 7: Gráfico de aproximaciones\n",
     "\n",
-    "Se desea conocer la gráfica de una función $u$ definida implícitamente como $ u(x) = y $ donde $ y $ es solución de:\n",
+    "Se desea conocer la gráfica de una función $u$ definida implícitamente como:\n",
     "\n",
-    "$$ y - e^{-(1 - xy)^2} = 0 $$\n",
+    "$$ U(x) = y \\mid y - e^{-(1 - xy)^2} = 0 $$\n",
     "\n",
-    "Implementar tres versiones de esta función, hallando el valor de $ y $ con los métodos de los ejercicios de bisección (lab2ej7bisec), Newton (lab2ej7newton) y punto fijo (lab2ej7ipf). Los valores iniciales y tolerancias usadas por los distintos métodos deben ser escogidos de manera que cualquier usuario pueda graficar u en el intervalo [0, 1.5] sin inconvenientes."
+    "Implementar tres versiones de esta función, hallando el valor de $ y $ con los métodos de los ejercicios de bisección, Newton y punto fijo. Los valores iniciales y tolerancias usadas por los distintos métodos deben ser escogidos de manera que cualquier usuario pueda graficar u en el intervalo $ [0, 1.5] $ sin inconvenientes."
    ]
   },
   {
@@ -885,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -915,7 +888,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +897,7 @@
        "(1.000030517578125, 1, 1.0)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -937,14 +910,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Gráficos de $ u(x) $\n",
-    "\n",
-    "Mostramos los gráficos generados en el intervalo (0, 1.5) con las funciones definidas arriba:"
+    "Graficamos:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
