- consigna lab3 & fix latex lab 2 -

--- a/Labs/Lab 2/Lab 02.ipynb
+++ b/Labs/Lab 2/Lab 02.ipynb
@@ -37,7 +37,7 @@
    "source": [
     "## 1: Método de bisección\n",
     "\n",
-    "Escribir una función que implemente el método de bisección para hallar una raíz de $ f : \\mathbb R 􏰀\\to \\mathbb R $ en el intervalo `[a,b]`. La función debe llamarse `rbisec`, y tener como entrada los argumentos `(fun,I,err,mit)`, donde fun es una función que dado $ x $ retorna $ f(x)$, $ I=[a,b] $ es un intervalo en $ \\mathbb R $, `err` es la tolerancia deseada del error y `mit` es el número máximo de iteraciones permitidas.\n",
+    "Escribir una función que implemente el método de bisección para hallar una raíz de $ f : \\mathbb R \\to \\mathbb R $ en el intervalo `[a,b]`. La función debe llamarse `rbisec`, y tener como entrada los argumentos `(fun,I,err,mit)`, donde fun es una función que dado $ x $ retorna $ f(x)$, $ I=[a,b] $ es un intervalo en $ \\mathbb R $, `err` es la tolerancia deseada del error y `mit` es el número máximo de iteraciones permitidas.\n",
     "\n",
     "El algoritmo debe finalizar en la k-esima iteración si \n",
     "\n",
@@ -394,7 +394,7 @@
    "source": [
     "## 3: Método de Newton\n",
     "\n",
-    "Escribir una función que implemente el método de Newton para hallar una raíz de $ f : \\mathbb R \\to \\mathbb R $ partiendo de un punto inicial x0. La función debe llamarse “rnewton”, y tener como entrada `(fun,x0,err,mit)` donde fun es una función que dado x retorna $ f(x) $ y $ f′(x) $, x0 es un punto inicial en $ \\mathbb R $, err es la tolerancia deseada del error y mit es el número máximo de iteraciones permitidas. El algoritmo debe finalizar en la k-esima iteración si se cumple alguna de las siguientes condiciones:\n",
+    "Escribir una función que implemente el método de Newton para hallar una raíz de $ f : \\mathbb R \\to \\mathbb R $ partiendo de un punto inicial x0. La función debe llamarse “rnewton”, y tener como entrada `(fun,x0,err,mit)` donde fun es una función que dado x retorna $ f(x) $ y $ f'(x) $, x0 es un punto inicial en $ \\mathbb R $, err es la tolerancia deseada del error y mit es el número máximo de iteraciones permitidas. El algoritmo debe finalizar en la k-esima iteración si se cumple alguna de las siguientes condiciones:\n",
     "\n",
     "$$ {|x_k - x_{k-1}| \\over |x_k|} < err $$\n",
     "<center>ò</center>\n",
@@ -584,7 +584,7 @@
     "\n",
     "Escribir una función que, ingresando $ a > 0 $, retorne una aproximación de $ \\sqrt[3]{a} $.\n",
     "\n",
-    "La aproximación debe realizarse usando el método de Newton del ejercicio anterior para resolver $ x^3 - a = 0$ con un error menor a $ 10^{-6} $ mediante el uso de la función $ f(x)􏰀 = x^3 - a$."
+    "La aproximación debe realizarse usando el método de Newton del ejercicio anterior para resolver $ x^3 - a = 0$ con un error menor a $ 10^{-6} $ mediante el uso de la función $ f(x)􏰀 = x^3 - a $."
    ]
   },
   {
