--- a/Labs/Lab 5/Lab 5.ipynb
+++ b/Labs/Lab 5/Lab 5.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,7 @@
     "import matplotlib.pyplot as plt\n",
     "import math\n",
     "import scipy\n",
+    "from scipy import integrate\n",
     "import functools"
    ]
   },
@@ -407,15 +408,115 @@
     "\n",
     "##### c) $ \\int_0^1 (1 + x^2)^{3/2} dx $\n",
     "\n",
-    "##### d) $ \\int_0^{\\pi / 2} { 1 \\over { \\sqrt { 1 - \\sin^2(t) / 2 } } } dt $"
+    "##### d) $ \\int_0^{\\pi / 2} { 1 \\over { \\sqrt { 1 - \\sin^2(t) / 2 } } } dt $\n",
+    "\n",
+    "Al usar las reglas del Trapecio y la de Simpson para calcular las integrales, tenemos un determinado error, dado por la cantidad de subintervalos que utilizamos. Estas fórmulas de error son las descriptas en el ejercicio anterior."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# TODO"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 5)\n",
+    "\n",
+    "Calcular las siguientes integrales utilizando la regla del Trapecio y Simpson, haciendo uso de la librería `scipy` (ver módule integrate).\n",
+    "\n",
+    "##### a) $ I = \\int_{-\\infty}^{\\infty} { e^{-x^2} dx } $\n",
+    "\n",
+    "##### b) $ I = \\int_0^2  { x^2 \\log \\left\\langle x + \\sqrt { x^2 + 1 } \\right\\rangle dx } $"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1.7724538509055159, 1.7724538509055157, 1.7724538509055159)"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# a)\n",
+    "\n",
+    "# function and interval\n",
+    "\n",
+    "f = lambda x: np.exp(-pow(x, 2))\n",
+    "a, b = -np.inf, np.inf\n",
+    "\n",
+    "# build representative space\n",
+    "\n",
+    "x = np.linspace(-100, 100, 500)\n",
+    "y = f(x)\n",
+    "\n",
+    "# compare methods with quad\n",
+    "\n",
+    "Is = integrate.simps(y, x)\n",
+    "It = integrate.trapz(y, x)\n",
+    "Iq = integrate.quad(f, a, b)[0]\n",
+    "\n",
+    "print(\n",
+    "f'Regla de Simpson: {Is} \\n'\n",
+    "f'Regla del trapecio: {It} \\n'\n",
+    "f'Quad: {Iq}'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Regla de Simpson: 3.1305683986984096 \n",
+      "Regla del trapecio: 3.1305785082442594 \n",
+      "Quad: 3.1305683832546523\n"
+     ]
+    }
+   ],
+   "source": [
+    "# b)\n",
+    "\n",
+    "# function and interval\n",
+    "\n",
+    "f = lambda x: pow(x, 2) * np.log(x + np.sqrt(pow(x, 2) + 1))\n",
+    "a, b = 0, 2\n",
+    "\n",
+    "# build representative space\n",
+    "\n",
+    "x = np.linspace(0, 2, 500)\n",
+    "y = f(x)\n",
+    "\n",
+    "# compare methods with quad\n",
+    "\n",
+    "Is = integrate.simps(y, x)\n",
+    "It = integrate.trapz(y, x)\n",
+    "Iq = integrate.quad(f, a, b)[0]\n",
+    "\n",
+    "print(\n",
+    "f'Regla de Simpson: {Is} \\n'\n",
+    "f'Regla del trapecio: {It} \\n'\n",
+    "f'Quad: {Iq}'\n",
+    ")"
+   ]
   }
  ],
  "metadata": {
