--- a/Labs/Lab 5/Lab 5.ipynb
+++ b/Labs/Lab 5/Lab 5.ipynb
@@ -517,6 +517,54 @@
     "f'Quad: {Iq}'\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6)\n",
+    "\n",
+    "El período de un péndulo de longitud $ l $ con amplitud $ \\alpha $ puede aproximarse con la fórmula: \n",
+    "\n",
+    "$$ T = 4 \\sqrt{\\frac{1}{g}} \\int_{0}^{\\pi / 2} { \\frac{d \\theta}{ (1 - \\sin^2{\\frac{\\alpha}{2}} \\sin^2{\\theta})^{\\frac{1}{2} } } } $$\n",
+    "\n",
+    "donde $ g = 9.8 m/s^2 $.\n",
+    "\n",
+    "Programar una función `pendulo` que reciba una longitud $ l $ en metros y $ \\alpha $ en forma de un número entero entre 0 y 90, transforme el valor en radianes y devuelva el período del péndulo de longitud de $ l $. ¿Qué ocurre en el caso de $ \\alpha = 0 $?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "g = 9.8\n",
+    "\n",
+    "def pendulo(long, alpha):\n",
+    "\n",
+    "    # redefinimos el angulo\n",
+    "    alpha = math.radians(alpha)\n",
+    "    \n",
+    "    # calculamos el primer múltiplo\n",
+    "    # de la expresión, en función de la longitud dada\n",
+    "    m = 4 * np.sqrt(long / g)\n",
+    "    \n",
+    "    # definimos el valor del cociente dentro la integral\n",
+    "    # en función del alpha dado\n",
+    "    def coc(x):\n",
+    "        return 1 / np.sqrt(1 - np.sin(alpha / 2)**2 * np.sin(x)**2)\n",
+    "    \n",
+    "    # aproximamos el valor de la integrada\n",
+    "    # del cociente, el segundo múltiplo de la expresión\n",
+    "    # utilizando scipy\n",
+    "    c = integrate.quad(coc, 0, np.pi / 2)[0]\n",
+    "    \n",
+    "    # calculamos el resultado final\n",
+    "    r = m * c\n",
+    "    \n",
+    "    return r"
+   ]
   }
  ],
  "metadata": {
